--- a/webdev/games/cardmatch/index.html
+++ b/webdev/games/cardmatch/index.html
@@ -15,7 +15,7 @@
 	</header>
 	<nav role="navigation">
 		<ul class="navlinks">
-			<li><a href="#instructions">Instructions</a><br /></li>
+			<li><a id="instructionsToggle" href="#instructions">Instructions</a><br /></li>
 			<li><a href="#game">Game</a></li>
 		</ul>
 	</nav>
@@ -33,8 +33,10 @@
 			</ul>
 		<p>Or visit <a href="http://timcaldwell.solutions">My Website</a> for more!</p>
 		-->
-		<h2 id="instructions">Instructions</h2>
-		<p>Concentration, also known as Match Match, Memory, Pelmanism, Shinkei-suijaku, Pexeso or simply Pairs, is a card game in which all of the cards are laid face down on a surface and two cards are flipped face up over each turn. The object of the game is to turn over pairs of matching cards.</p>
+		<div id="instructionsContainer" style="height:0px">
+			<h2 id="instructions">Instructions</h2>
+			<p>Concentration, also known as Match Match, Memory, Pelmanism, Shinkei-suijaku, Pexeso or simply Pairs, is a card game in which all of the cards are laid face down on a surface and two cards are flipped face up over each turn. The object of the game is to turn over pairs of matching cards.</p>
+		</div>
 
 	<div id="game-board" class="board clearfix"></div>
 
@@ -42,8 +44,8 @@
 	</main>
 
 	<footer class="clearfix">
-		<p class="copyright">Copyright 2017</p>
-		<p class="message">Created with &hearts; by <span class="name">GA</span></p>
+		<p class="copyright">Copyright 2018</p>
+		<p class="message">Created by <span class="name">Tim Caldwell</span> sourced from <a class="name" href="https://generalassemb.ly/">GA</span></p>
 	</footer>
 
 	<script src="js/main.js"></script>
