added difficulty, new images and more cards to card match game

--- a/webdev/games/cardmatch/index.html
+++ b/webdev/games/cardmatch/index.html
@@ -16,7 +16,7 @@
 	<nav role="navigation">
 		<ul class="navlinks">
 			<li><a id="instructionsToggle" href="#instructions">Instructions</a><br /></li>
-			<li><a href="#game">Game</a></li>
+			<li><a href="#game-board">Game</a></li>
 		</ul>
 	</nav>
 
@@ -38,9 +38,20 @@
 			<p>Concentration, also known as Match Match, Memory, Pelmanism, Shinkei-suijaku, Pexeso or simply Pairs, is a card game in which all of the cards are laid face down on a surface and two cards are flipped face up over each turn. The object of the game is to turn over pairs of matching cards.</p>
 		</div>
 
+	<button id="resetGameButtonTop">Reset Game</button>
+
+  <select id="difficulty" onChange="changeDifficulty()">
+    <option value="1">Hard (52 Cards)</option>
+    <option value="2">Moderate (28 Cards)</option>
+    <option value="3">Easy (16 Cards)</option>
+    <option selected="selected" value="4">Noob (12 Cards)</option>
+  </select>
+
+</form>
+	
 	<div id="game-board" class="board clearfix"></div>
 
-	<button id="resetGameButton">Reset Game</button>
+	<button id="resetGameButtonBottom">Reset Game</button>
 	</main>
 
 	<footer class="clearfix">
