updated page layout using bootstrap base and fixed link path through to the cardmatch game

--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,6 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <!-- Custom CSS -->
     <link rel="stylesheet" href="css/layout.css">
     <link rel="stylesheet" href="css/main.css">
 
@@ -29,18 +28,15 @@
         <nav class="nav nav-masthead justify-content-center">
           <a class="nav-link" href="about.html">About</a>
           <a class="nav-link" href="webdev/landing.html">Web Development</a>
-          <a class="nav-link" href="contact.html">Contact</a>
+          <a class="nav-link active" href="contact.html">Contact</a>
         </nav>
       </div>
     </header>
 
     <main role="main" class="inner cover">
-      <!--<img class="profile" src="https://i.imgur.com/m7Lkrno.png">-->
-      <h1 class="cover-heading">Frictionless experience.</h1>
-      <p class="lead">Hi! I'm Tim, a Sydney-based <a class="define" href="https://www.merriam-webster.com/dictionary/solutionist" target="about:blank">solutionist</a>! My mission is to create solutions that deliver a frictionless experience to anyone who uses them.</p>
-      <p class="lead">
-        <a href="about.html" class="btn btn-lg btn-secondary">Learn more</a>
-      </p>
+      <h3>Contact Me:</h3>
+      <img class="profile" src="https://i.imgur.com/m7Lkrno.png">
+      <p class="text-justify">Contact Info Here!</p>
     </main>
 
     <footer class="mastfoot mt-auto">
