--- a/about.html
+++ b/about.html
@@ -12,7 +12,6 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <!-- Custom CSS -->
     <link rel="stylesheet" href="css/layout.css">
     <link rel="stylesheet" href="css/main.css">
 
@@ -27,7 +26,7 @@
       <div class="inner">
         <h3 class="masthead-brand"><a href="index.html">Tim Caldwell</a></h3>
         <nav class="nav nav-masthead justify-content-center">
-          <a class="nav-link" href="about.html">About</a>
+          <a class="nav-link active" href="about.html">About</a>
           <a class="nav-link" href="webdev/landing.html">Web Development</a>
           <a class="nav-link" href="contact.html">Contact</a>
         </nav>
@@ -35,11 +34,13 @@
     </header>
 
     <main role="main" class="inner cover">
-      <!--<img class="profile" src="https://i.imgur.com/m7Lkrno.png">-->
-      <h1 class="cover-heading">Frictionless experience.</h1>
-      <p class="lead">Hi! I'm Tim, a Sydney-based <a class="define" href="https://www.merriam-webster.com/dictionary/solutionist" target="about:blank">solutionist</a>! My mission is to create solutions that deliver a frictionless experience to anyone who uses them.</p>
+      <h3>My Mission:</h3>
+      <h4>To create solutions that deliver a frictionless experience to anyone who uses them.</h4>
+      <img class="profile" src="https://i.imgur.com/m7Lkrno.png">
+      <p class="text-justify">I have a background in Information Technology Support and DevOps, having supported enterprise windows environments for over 10 years at various levels and using various technologies. In this environment I cultivated a strong desire to deliver the best exprience possible for customers and for IT staff using support tools to deliver services to those customers.</p>
+      <p class="text-justify">In time I learned to merge my creative side with my technical side to develop solutions for a wide range of problems. I now bring this passion forward into my Web Development practice and use it to focus on my mission.</p>
       <p class="lead">
-        <a href="about.html" class="btn btn-lg btn-secondary">Learn more</a>
+        <a href="webdev/landing.html" class="btn btn-lg btn-secondary">Learn More</a>
       </p>
     </main>
 
