--- a/webdev/landing.html
+++ b/webdev/landing.html
@@ -12,9 +12,8 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="css/layout.css">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="../css/layout.css">
+    <link rel="stylesheet" href="../css/main.css">
 
 
     <title>Tim Caldwell Solutions</title>
@@ -25,22 +24,36 @@
   <div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
     <header class="masthead mb-auto">
       <div class="inner">
-        <h3 class="masthead-brand"><a href="index.html">Tim Caldwell</a></h3>
+        <h3 class="masthead-brand"><a href="../index.html">Tim Caldwell</a></h3>
         <nav class="nav nav-masthead justify-content-center">
-          <a class="nav-link" href="about.html">About</a>
-          <a class="nav-link" href="webdev/landing.html">Web Development</a>
-          <a class="nav-link" href="contact.html">Contact</a>
+          <a class="nav-link" href="../about.html">About</a>
+          <a class="nav-link active" href="#">Web Development</a>
+          <a class="nav-link" href="../contact.html">Contact</a>
         </nav>
       </div>
     </header>
 
     <main role="main" class="inner cover">
-      <!--<img class="profile" src="https://i.imgur.com/m7Lkrno.png">-->
-      <h1 class="cover-heading">Frictionless experience.</h1>
-      <p class="lead">Hi! I'm Tim, a Sydney-based <a class="define" href="https://www.merriam-webster.com/dictionary/solutionist" target="about:blank">solutionist</a>! My mission is to create solutions that deliver a frictionless experience to anyone who uses them.</p>
-      <p class="lead">
-        <a href="about.html" class="btn btn-lg btn-secondary">Learn more</a>
-      </p>
+      <div class="row">
+        <div class="col-sm-6">
+          <div class="card card-dark">
+            <div class="card-body">
+              <h5 class="card-title">Games</h5>
+              <p class="card-text">See the web games I've created.</p>
+              <a href="games/games.html" class="btn btn-primary">View</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6">
+          <div class="card card-dark">
+            <div class="card-body">
+              <h5 class="card-title">Websites</h5>
+              <p class="card-text">See the websites I've created.</p>
+              <a href="#" class="btn btn-primary">View</a>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
 
     <footer class="mastfoot mt-auto">
