linked apps and games now in modules

--- a/webdev/apps/apps.html
+++ b/webdev/apps/apps.html
@@ -38,9 +38,9 @@
         <div class="col-sm-6">
           <div class="card card-dark">
             <div class="card-body">
-              <h5 class="card-title">Memory Match</h5>
-              <p class="card-text">Simple card matching game.</p>
-              <a href="js_cardmatch" class="btn btn-primary">Play</a>
+              <h5 class="card-title">JS Paint</h5>
+              <p class="card-text">Simple JavaScript paint app</p>
+              <a href="js_paint" class="btn btn-primary">Paint!</a>
             </div>
           </div>
         </div>
