simplify layout, re-link portfolio, and create cards for portfolio page

--- a/about.html
+++ b/about.html
@@ -21,27 +21,35 @@
 <body class="text-center">
 
 
-  <div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
+  <div class="cover-container d-flex h-100 p-3 mx-auto flex-column full-vh">
     <header class="masthead mb-auto">
       <div class="inner">
         <h3 class="masthead-brand"><a href="index.html">Tim Caldwell</a></h3>
         <nav class="nav nav-masthead justify-content-center">
           <a class="nav-link active" href="about.html">About</a>
-          <a class="nav-link" href="webdev/landing.html">Web Development</a>
-          <a class="nav-link" href="contact.html">Contact</a>
+          <a class="nav-link" href="landing.html">Projects</a>
+          <a class="nav-link" href="https://www.linkedin.com/in/tim-caldwell-solutionist" target="_blank"><img class="inline-img" src="res/In-2C-48px-R.png"></a>
+          <a class="nav-link" href="https://github.com/zailleh" target="_blank"><img class="inline-img" src="res/GitHub-Mark-Light-120px-plus.png"></a>
+          <a class="nav-link" href="https://twitter.com/TimCSolutions" target="_blank"><img class="inline-img" src="res/Twitter_Social_Icon_Rounded_Square_Color.svg"></a>
         </nav>
       </div>
     </header>
 
     <main role="main" class="inner cover">
-      <h3>My Mission:</h3>
-      <h4>To create solutions that deliver a frictionless experience to anyone who uses them.</h4>
-      <img class="profile" src="https://i.imgur.com/m7Lkrno.png">
-      <p class="text-justify">I have a background in Information Technology Support and DevOps, having supported enterprise windows environments for over 10 years at various levels and using various technologies. In this environment I cultivated a strong desire to deliver the best exprience possible for customers and for IT staff using support tools to deliver services to those customers.</p>
-      <p class="text-justify">In time I learned to merge my creative side with my technical side to develop solutions for a wide range of problems. I now bring this passion forward into my Web Development practice and use it to focus on my mission.</p>
-      <p class="lead">
-        <a href="webdev/landing.html" class="btn btn-lg btn-secondary">Learn More</a>
-      </p>
+      <!--<img class="profile" src="https://i.imgur.com/m7Lkrno.png">-->
+      <div class="card card-dark">
+        <div class="card-body">
+          <h3>My Mission:</h3>
+          <h4>To create solutions that deliver a frictionless experience to anyone who uses them.</h4>
+          <img class="profile" src="https://i.imgur.com/m7Lkrno.png">
+          <p class="text-justify">I have a background in Information Technology Support and DevOps, having supported enterprise windows environments for over 10 years at various levels and using various technologies. In this environment I cultivated a strong desire to deliver the best exprience possible for customers and for IT staff using support tools to deliver services to those customers.</p>
+          <p class="text-justify">In time I learned to merge my creative side with my technical side to develop solutions for a wide range of problems. I now bring this passion forward into my Web Development practice and use it to focus on my mission.</p>
+          <p class="lead">
+            <a href="landing.html" class="btn btn-lg btn-primary">Learn More</a>
+          </p>
+        </div>
+      </div>
+     
     </main>
 
     <footer class="mastfoot mt-auto">
