--- a/contact.html
+++ b/contact.html
@@ -27,16 +27,18 @@
         <h3 class="masthead-brand"><a href="index.html">Tim Caldwell</a></h3>
         <nav class="nav nav-masthead justify-content-center">
           <a class="nav-link" href="about.html">About</a>
-          <a class="nav-link" href="webdev/landing.html">Web Development</a>
-          <a class="nav-link active" href="contact.html">Contact</a>
+          <a class="nav-link" href="landing.html">Web Development</a>
+          <a class="nav-link" href="https://www.linkedin.com/in/tim-caldwell-solutionist" target="_blank"><img class="inline-img" src="res/In-2C-48px-R.png"></a>
+          <a class="nav-link" href="https://github.com/zailleh" target="_blank"><img class="inline-img" src="res/GitHub-Mark-Light-120px-plus.png"></a>
+          <a class="nav-link" href="https://twitter.com/TimCSolutions" target="_blank"><img class="inline-img" src="res/Twitter_Social_Icon_Rounded_Square_Color.svg"></a>
         </nav>
       </div>
     </header>
 
     <main role="main" class="inner cover">
       <h3>Contact Me:</h3>
-      <img class="profile" src="https://i.imgur.com/m7Lkrno.png">
-      <p class="text-justify">Contact Info Here!</p>
+      <p class="text-justify">To get in touch with me, please find me on LinkedIn and send me a message from there!</p>
+      <a class="btn btn-dark" href="https://www.linkedin.com/in/tim-caldwell-solutionist" target="_blank"><img class="inline-img" src="C:\Users\desmo\Documents\Development\zailleh.github.io\res\In-2C-48px-R.png">Contact Me</a>
     </main>
 
     <footer class="mastfoot mt-auto">
