--- a/index.html
+++ b/index.html
@@ -22,25 +22,31 @@
 <body class="text-center">
 
 
-  <div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
+  <div class="cover-container d-flex h-100 p-3 mx-auto flex-column full-vh">
     <header class="masthead mb-auto">
       <div class="inner">
         <h3 class="masthead-brand"><a href="index.html">Tim Caldwell</a></h3>
         <nav class="nav nav-masthead justify-content-center">
           <a class="nav-link" href="about.html">About</a>
-          <a class="nav-link" href="webdev/landing.html">Web Development</a>
-          <a class="nav-link" href="contact.html">Contact</a>
+          <a class="nav-link" href="landing.html">Projects</a>
+          <a class="nav-link" href="https://www.linkedin.com/in/tim-caldwell-solutionist" target="_blank"><img class="inline-img" src="res/In-2C-48px-R.png"></a>
+          <a class="nav-link" href="https://github.com/zailleh" target="_blank"><img class="inline-img" src="res/GitHub-Mark-Light-120px-plus.png"></a>
+          <a class="nav-link" href="https://twitter.com/TimCSolutions" target="_blank"><img class="inline-img" src="res/Twitter_Social_Icon_Rounded_Square_Color.svg"></a>
         </nav>
       </div>
     </header>
 
     <main role="main" class="inner cover">
       <!--<img class="profile" src="https://i.imgur.com/m7Lkrno.png">-->
-      <h1 class="cover-heading">Frictionless experience.</h1>
-      <p class="lead">Hi! I'm Tim, a Sydney-based <a class="define" href="https://www.merriam-webster.com/dictionary/solutionist" target="about:blank">solutionist</a>! My mission is to create solutions that deliver a frictionless experience to anyone who uses them.</p>
-      <p class="lead">
-        <a href="about.html" class="btn btn-lg btn-secondary">Learn more</a>
-      </p>
+      <div class="card card-dark">
+        <div class="card-body">
+          <h1 class="cover-heading">Frictionless experience.</h1>
+          <p class="lead">Hi! I'm Tim, a Sydney-based <a class="define" href="https://www.merriam-webster.com/dictionary/solutionist" target="about:blank">solutionist</a>! My mission is to create solutions that deliver a frictionless experience to anyone who uses them.</p>
+          <p class="lead">
+            <a href="about.html" class="btn btn-lg btn-primary">Learn more</a>
+          </p>
+        </div>
+      </div>
     </main>
 
     <footer class="mastfoot mt-auto">
