add badges to portfolio apps

--- a/landing.html
+++ b/landing.html
@@ -48,7 +48,9 @@
         </a>
         <div class="card-body">
           <h5 class="card-title">FURevr - Pet Adoption</h5>
-          <h6 class="card-subtitle mb-2 text-muted">Ruby on Rails App</h6>
+          <h6 class="card-subtitle mb-2">
+            <span class="badge badge-pill badge-danger rails">Rails</span>
+          </h6>
           <p class="card-text">Web application for pet adoptions</p>
         </div>
         <div class="buttons-bottom">
@@ -65,7 +67,9 @@
         </a>
         <div class="card-body">
           <h5 class="card-title">Aus Pet API</h5>
-          <h6 class="card-subtitle mb-2 text-muted">Ruby on Rails App / API</h6>
+          <h6 class="card-subtitle mb-2">
+            <span class="badge badge-pill badge-danger rails">Rails</span>
+          </h6>
           <p class="card-text">API for a database pets for adoption across Australia. Work in Progress</p>
         </div>
         <div class="buttons-bottom">
@@ -76,90 +80,111 @@
 
       <!-- JS Card Match -->
       <div class="card card-dark card-portfolio">
-          <a href="http://timcaldwell.solutions/js_cardmatch/" target="_blank">
-            <img src="res/js-match.PNG" class="card-img-top crop-square hover-img" />
-          </a>
-          <div class="card-body">
-            <h5 class="card-title">Card Match</h5>
-            <h6 class="card-subtitle mb-2 text-muted">JavaScript</h6>
-            <p class="card-text">Simple card matching game made with JavaScript</p>
-          </div>
-          <div class="buttons-bottom">
-            <a href="http://timcaldwell.solutions/js_cardmatch/" target="_blank" class="btn btn-primary">Play</a>
-            <a href="https://github.com/zailleh/js_cardmatch" target="_blank" class="btn btn-dark"><span class="gh-logo"></span>GitHub</a>
-          </div>
+        <a href="http://timcaldwell.solutions/js_cardmatch/" target="_blank">
+          <img src="res/js-match.PNG" class="card-img-top crop-square hover-img" />
+        </a>
+        <div class="card-body">
+          <h5 class="card-title">Card Match</h5>
+          <h6 class="card-subtitle mb-2">
+            <span class="badge badge-pill badge-warning js">JavaScript</span>
+            <span class="badge badge-pill badge-info spa" alt>
+              <abbr title="Single Page App">SPA</abbr>
+            </span>
+          </h6>
+          <p class="card-text">Simple card matching game made with JavaScript</p>
         </div>
-        <!-- End Card -->
-
-        <!-- JS Pacman -->
-        <div class="card card-dark card-portfolio">
-          <a href="http://timcaldwell.solutions/js_pacman/" target="_blank">
-            <img src="res/js_pac.PNG" class="card-img-top crop-square hover-img" />
-          </a>
-          <div class="card-body">
-            <h5 class="card-title">Pacman</h5>
-            <h6 class="card-subtitle mb-2 text-muted">JavaScript</h6>
-            <p class="card-text">A recreation of Pacman in JavaScript. Work in Progress</p>
-          </div>
-          <div class="buttons-bottom">
-            <a href="http://timcaldwell.solutions/js_pacman/" target="_blank" class="btn btn-primary">Play!</a>
-            <a href="https://github.com/zailleh/js_pacman" target="_blank" class="btn btn-dark"><span class="gh-logo"></span>GitHub</a>
-          </div>
+        <div class="buttons-bottom">
+          <a href="http://timcaldwell.solutions/js_cardmatch/" target="_blank" class="btn btn-primary">Play</a>
+          <a href="https://github.com/zailleh/js_cardmatch" target="_blank" class="btn btn-dark"><span class="gh-logo"></span>GitHub</a>
         </div>
-        <!-- End Card -->
+      </div>
+      <!-- End Card -->
 
-        <!-- JS Paint -->
-        <div class="card card-dark card-portfolio">
-            <a href="http://timcaldwell.solutions/js_paint/" target="_blank">
-              <img src="res/jspaint.PNG" class="card-img-top crop-square hover-img" />
-            </a>
-            <div class="card-body">
-              <h5 class="card-title">Web Paint</h5>
-              <h6 class="card-subtitle mb-2 text-muted">JavaScript</h6>
-              <p class="card-text">A pixel paint program inspired by <a href="https://make8bitart.com/" target="_blank">make 8-bit art!</a></p>
-            </div>
-            <div class="buttons-bottom">
-              <a href="http://timcaldwell.solutions/js_paint/" target="_blank" class="btn btn-primary">Paint!</a>
-              <a href="https://github.com/zailleh/js_paint" target="_blank" class="btn btn-dark"><span class="gh-logo"></span>GitHub</a>
-            </div>
-          </div>
-          <!-- End Card -->
+      <!-- JS Pacman -->
+      <div class="card card-dark card-portfolio">
+        <a href="http://timcaldwell.solutions/js_pacman/" target="_blank">
+          <img src="res/js_pac.PNG" class="card-img-top crop-square hover-img" />
+        </a>
+        <div class="card-body">
+          <h5 class="card-title">Pacman</h5>
+          <h6 class="card-subtitle mb-2">
+            <span class="badge badge-pill badge-warning js">JavaScript</span>
+            <span class="badge badge-pill badge-info spa" alt>
+              <abbr title="Single Page App">SPA</abbr>
+            </span>
+          </h6>
+          <p class="card-text">A recreation of Pacman in JavaScript. Work in Progress</p>
+        </div>
+        <div class="buttons-bottom">
+          <a href="http://timcaldwell.solutions/js_pacman/" target="_blank" class="btn btn-primary">Play!</a>
+          <a href="https://github.com/zailleh/js_pacman" target="_blank" class="btn btn-dark"><span class="gh-logo"></span>GitHub</a>
+        </div>
+      </div>
+      <!-- End Card -->
 
-          <!-- Tic-Tac-Toe -->
-          <div class="card card-dark card-portfolio">
-            <a href="http://timcaldwell.solutions/wdi28-tictactoe/" target="_blank">
-              <img src="res/ttt.png" class="card-img-top crop-square hover-img hover-img" />
-            </a>
-            <div class="card-body">
-              <h5 class="card-title">Tic-Tac-Toe</h5>
-              <h6 class="card-subtitle mb-2 text-muted">JavaScript</h6>
-              <p class="card-text">A simple tic-tac-toe game with basic AI and online multiplayer with <a href="https://firebase.google.com/" target="_blank"></a><img class="inline-img" src="res/firebase.png"></a></p>
-            </div>
-            <div class="buttons-bottom">
-              <a href="http://timcaldwell.solutions/wdi28-tictactoe/" target="_blank" class="btn btn-primary">Play!</a>
-              <a href="https://github.com/zailleh/wdi28-tictactoe" target="_blank" class="btn btn-dark"><span class="gh-logo"></span>GitHub</a>
-            </div>
-          </div>
-          <!-- End Card -->
+      <!-- JS Paint -->
+      <div class="card card-dark card-portfolio">
+        <a href="http://timcaldwell.solutions/js_paint/" target="_blank">
+          <img src="res/jspaint.PNG" class="card-img-top crop-square hover-img" />
+        </a>
+        <div class="card-body">
+          <h5 class="card-title">Web Paint</h5>
+          <h6 class="card-subtitle mb-2">
+            <span class="badge badge-pill badge-warning js">JavaScript</span>
+            <span class="badge badge-pill badge-info spa" alt>
+              <abbr title="Single Page App">SPA</abbr>
+            </span>
+          </h6>
+          <p class="card-text">A pixel paint program inspired by <a href="https://make8bitart.com/" target="_blank">make 8-bit art!</a></p>
+        </div>
+        <div class="buttons-bottom">
+          <a href="http://timcaldwell.solutions/js_paint/" target="_blank" class="btn btn-primary">Paint!</a>
+          <a href="https://github.com/zailleh/js_paint" target="_blank" class="btn btn-dark"><span class="gh-logo"></span>GitHub</a>
+        </div>
+      </div>
+      <!-- End Card -->
 
-          <!-- Tic-Tac-Toe -->
-          <div class="card card-dark card-portfolio">
-              <a href="http://timcaldwell.solutions/jQuery_game/" target="_blank">
-                <img src="res/jq-play.PNG" class="card-img-top crop-square hover-img" />
-              </a>
-              <div class="card-body">
-                <h5 class="card-title">jQuery Game</h5>
-                <h6 class="card-subtitle mb-2 text-muted">JavaScript</h6>
-                <p class="card-text">Simple game to learn jQuery. Levels/lessions work in progress.</p>
-              </div>
-              <div class="buttons-bottom">
-                <a href="http://timcaldwell.solutions/jQuery_game/" target="_blank" class="btn btn-primary">Play!</a>
-                <a href="https://github.com/zailleh/jQuery_game" target="_blank" class="btn btn-dark"><span class="gh-logo"></span>GitHub</a>
-              </div>
-            </div>
-            <!-- End Card -->
-          
-          
+      <!-- Tic-Tac-Toe -->
+      <div class="card card-dark card-portfolio">
+        <a href="http://timcaldwell.solutions/wdi28-tictactoe/" target="_blank">
+          <img src="res/ttt.png" class="card-img-top crop-square hover-img hover-img" />
+        </a>
+        <div class="card-body">
+          <h5 class="card-title">Tic-Tac-Toe</h5>
+          <h6 class="card-subtitle mb-2">
+            <span class="badge badge-pill badge-warning js">JavaScript</span>
+            <span class="badge badge-pill badge-info spa" alt>
+              <abbr title="Single Page App">SPA</abbr>
+            </span>
+          </h6>
+          <p class="card-text">A simple tic-tac-toe game with basic AI and online multiplayer with <a href="https://firebase.google.com/" target="_blank"></a><img class="inline-img" src="res/firebase.png"></a></p>
+        </div>
+        <div class="buttons-bottom">
+          <a href="http://timcaldwell.solutions/wdi28-tictactoe/" target="_blank" class="btn btn-primary">Play!</a>
+          <a href="https://github.com/zailleh/wdi28-tictactoe" target="_blank" class="btn btn-dark"><span class="gh-logo"></span>GitHub</a>
+        </div>
+      </div>
+      <!-- End Card -->
+
+      <!-- Tic-Tac-Toe -->
+      <div class="card card-dark card-portfolio">
+        <a href="http://timcaldwell.solutions/jQuery_game/" target="_blank">
+          <img src="res/jq-play.PNG" class="card-img-top crop-square hover-img" />
+        </a>
+        <div class="card-body">
+          <h5 class="card-title">jQuery Game</h5>
+          <h6 class="card-subtitle mb-2">
+            <span class="badge badge-pill badge-warning js">JavaScript</span>
+            <span class="badge badge-pill badge-info spa" alt><abbr title="Single Page App">SPA</abbr></span>
+          </h6>
+          <p class="card-text">Simple game to learn jQuery. Levels/lessions work in progress.</p>
+        </div>
+        <div class="buttons-bottom">
+          <a href="http://timcaldwell.solutions/jQuery_game/" target="_blank" class="btn btn-primary">Play!</a>
+          <a href="https://github.com/zailleh/jQuery_game" target="_blank" class="btn btn-dark"><span class="gh-logo"></span>GitHub</a>
+        </div>
+      </div>
+      <!-- End Card -->
     </main>
 
 
@@ -182,6 +207,7 @@
     crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
     crossorigin="anonymous"></script>
+  <script src="js/main.js"></script>
 </body>
 
 </html>
