--- a/landing.html
+++ b/landing.html
@@ -47,7 +47,9 @@
           <img src="res/furevr.PNG" class="card-img-top crop-square hover-img" />
         </a>
         <div class="card-body">
-          <h5 class="card-title">FURevr - Pet Adoption</h5>
+          <h5 class="card-title">FURevr - Pet Adoption
+            <span class="badge badge-pill badge-secondary">WIP</span>
+          </h5>
           <h6 class="card-subtitle mb-2">
             <span class="badge badge-pill badge-danger rails">Rails</span>
           </h6>
@@ -66,7 +68,9 @@
           <img src="res/au-pet-api.png" class="card-img-top crop-square hover-img" />
         </a>
         <div class="card-body">
-          <h5 class="card-title">Aus Pet API</h5>
+          <h5 class="card-title">Aus Pet API
+            <span class="badge badge-pill badge-secondary">WIP</span>
+          </h5>
           <h6 class="card-subtitle mb-2">
             <span class="badge badge-pill badge-danger rails">Rails</span>
           </h6>
@@ -84,7 +88,9 @@
           <img src="res/js-match.PNG" class="card-img-top crop-square hover-img" />
         </a>
         <div class="card-body">
-          <h5 class="card-title">Card Match</h5>
+          <h5 class="card-title">Card Match
+            <span class="badge badge-pill badge-secondary">WIP</span>
+          </h5>
           <h6 class="card-subtitle mb-2">
             <span class="badge badge-pill badge-warning js">JavaScript</span>
             <span class="badge badge-pill badge-info spa" alt>
@@ -106,7 +112,9 @@
           <img src="res/js_pac.PNG" class="card-img-top crop-square hover-img" />
         </a>
         <div class="card-body">
-          <h5 class="card-title">Pacman</h5>
+          <h5 class="card-title">Pacman
+            <span class="badge badge-pill badge-secondary">WIP</span>
+          </h5>
           <h6 class="card-subtitle mb-2">
             <span class="badge badge-pill badge-warning js">JavaScript</span>
             <span class="badge badge-pill badge-info spa" alt>
@@ -128,7 +136,9 @@
           <img src="res/jspaint.PNG" class="card-img-top crop-square hover-img" />
         </a>
         <div class="card-body">
-          <h5 class="card-title">Web Paint</h5>
+          <h5 class="card-title">Web Paint
+            <span class="badge badge-pill badge-secondary">WIP</span>
+          </h5>
           <h6 class="card-subtitle mb-2">
             <span class="badge badge-pill badge-warning js">JavaScript</span>
             <span class="badge badge-pill badge-info spa" alt>
@@ -172,7 +182,9 @@
           <img src="res/jq-play.PNG" class="card-img-top crop-square hover-img" />
         </a>
         <div class="card-body">
-          <h5 class="card-title">jQuery Game</h5>
+          <h5 class="card-title">jQuery Game
+            <span class="badge badge-pill badge-secondary">WIP</span>
+          </h5>
           <h6 class="card-subtitle mb-2">
             <span class="badge badge-pill badge-warning js">JavaScript</span>
             <span class="badge badge-pill badge-info spa" alt><abbr title="Single Page App">SPA</abbr></span>
