add simple-xhr module to projects

--- a/landing.html
+++ b/landing.html
@@ -39,7 +39,7 @@
         </nav>
       </div>
     </header>
-
+    <!-- **************** CARDS ******************* -->
     <main role="main" class="inner cover d-flex flex-row flex-wrap justify-content-center">
       <!-- FURever App -->
       <div class="card card-dark card-portfolio card-portfolio">
@@ -78,6 +78,26 @@
         </div>
         <div class="buttons-bottom">
           <a href="https://github.com/zailleh/aus_pet_crawler" target="_blank" class="btn btn-dark"><span class="gh-logo"></span>GitHub</a>
+        </div>
+      </div>
+      <!-- End Card -->
+
+      <!-- Simple-XHR Library -->
+      <div class="card card-dark card-portfolio card-portfolio">
+        <a href="https://github.com/zailleh/simple-xhr" target="_blank">
+          <img src="res/simple-xhr.png" class="card-img-top crop-square hover-img" />
+        </a>
+        <div class="card-body">
+          <h5 class="card-title">Simple-XHR JS Module
+          </h5>
+          <h6 class="card-subtitle mb-2">
+            <span class="badge badge-pill badge-warning js">JavaScript</span>
+          </h6>
+          <p class="card-text">Small JavaScript module to simplify AJAX requests</p>
+        </div>
+        <div class="buttons-bottom">
+          <a href="https://github.com/zailleh/simple-xhr" target="_blank" class="btn btn-dark">
+            <span class="gh-logo"></span>GitHub</a>
         </div>
       </div>
       <!-- End Card -->
