--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
         <div class="card-body">
           <h3>My Mission:</h3>
           <h4>To create solutions that deliver a frictionless experience to anyone who uses them.</h4>
-          <img class="profile" src="https://i.imgur.com/m7Lkrno.png">
+          <div class="profile"></div>
           <p class="text-justify">I have a background in Information Technology Support and DevOps, having supported enterprise windows environments for over 10 years at various levels and using various technologies. In this environment I cultivated a strong desire to deliver the best exprience possible for customers and for IT staff using support tools to deliver services to those customers.</p>
           <p class="text-justify">In time I learned to merge my creative side with my technical side to develop solutions for a wide range of problems. I now bring this passion forward into my Web Development practice and use it to focus on my mission.</p>
           <p class="lead">
@@ -65,5 +65,6 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
