add new project - happy find

--- a/landing.html
+++ b/landing.html
@@ -82,6 +82,28 @@
       </div>
       <!-- End Card -->
 
+      <!-- HappyFind React App -->
+      <div class="card card-dark card-portfolio card-portfolio">
+        <a href="https://lucasp22.github.io/happy_find_client/" target="_blank">
+          <img src="res/happysnap.png" class="card-img-top crop-square hover-img" />
+        </a>
+        <div class="card-body">
+          <h5 class="card-title">HappyFind - Task Finder</h5>
+          <h6 class="card-subtitle mb-2">
+            <span class="badge badge-pill badge-info react">React</span>
+            <span class="badge badge-pill badge-danger rails">Rails</span>
+          </h6>
+          <p class="card-text">Task finder / booking service to find services near you and book online</p>
+        </div>
+        <div class="buttons-bottom">
+          <a href="https://lucasp22.github.io/happy_find_client/" target="_blank" class="btn btn-primary">View</a>
+          <a href="https://github.com/Lucasp22/happy_find_client" target="_blank" class="btn btn-dark">
+            <span class="gh-logo"></span>GitHub</a>
+        </div>
+      </div>
+      <!-- End Card -->
+       
+
       <!-- Simple-XHR Library -->
       <div class="card card-dark card-portfolio card-portfolio">
         <a href="https://github.com/zailleh/simple-xhr" target="_blank">
@@ -120,7 +142,7 @@
           <p class="card-text">Simple card matching game made with JavaScript</p>
         </div>
         <div class="buttons-bottom">
-          <a href="http://timcaldwell.solutions/js_cardmatch/" target="_blank" class="btn btn-primary">Play</a>
+          <a href="http://timcaldwell.solutions/js_cardmatch/" target="_blank" class="btn btn-primary">Play!</a>
           <a href="https://github.com/zailleh/js_cardmatch" target="_blank" class="btn btn-dark"><span class="gh-logo"></span>GitHub</a>
         </div>
       </div>
