make 3 columns on landing and make image highlight when hovering over anywhere on the card

--- a/landing.html
+++ b/landing.html
@@ -42,7 +42,7 @@
     <!-- **************** CARDS ******************* -->
     <main role="main" class="inner cover d-flex flex-row flex-wrap justify-content-center">
       <!-- FURever App -->
-      <div class="card card-dark card-portfolio card-portfolio">
+      <div class="card card-dark card-portfolio">
         <a href="http://furevr-app.herokuapp.com/" target="_blank" >
           <img src="res/furevr.PNG" class="card-img-top crop-square hover-img" />
         </a>
@@ -83,7 +83,7 @@
       <!-- End Card -->
 
       <!-- HappyFind React App -->
-      <div class="card card-dark card-portfolio card-portfolio">
+      <div class="card card-dark card-portfolio">
         <a href="https://lucasp22.github.io/happy_find_client/" target="_blank">
           <img src="res/happysnap.png" class="card-img-top crop-square hover-img" />
         </a>
@@ -105,7 +105,7 @@
        
 
       <!-- Simple-XHR Library -->
-      <div class="card card-dark card-portfolio card-portfolio">
+      <div class="card card-dark card-portfolio">
         <a href="https://github.com/zailleh/simple-xhr" target="_blank">
           <img src="res/simple-xhr.png" class="card-img-top crop-square hover-img" />
         </a>
